RESOLVED FIXED226079
Compiler warning unreached end of function in DataURLDecoder
https://bugs.webkit.org/show_bug.cgi?id=226079
Summary Compiler warning unreached end of function in DataURLDecoder
Eleni Maria Stea
Reported 2021-05-21 05:37:24 PDT
Fix compiler warning for unreached end of function in DataURLDecoder
Attachments
Patch (1.44 KB, patch)
2021-05-21 05:40 PDT, Eleni Maria Stea
no flags
Eleni Maria Stea
Comment 1 2021-05-21 05:40:45 PDT
EWS
Comment 2 2021-05-21 07:51:00 PDT
Committed r277860 (238002@main): <https://commits.webkit.org/238002@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429287 [details].
Radar WebKit Bug Importer
Comment 3 2021-05-21 07:51:17 PDT
Note You need to log in before you can comment on or make changes to this bug.