Fixed unreached end of function compiler warning in DataURLDecoder. https://bugs.webkit.org/show_bug.cgi?id=226079

Patch by Eleni Maria Stea <estea@igalia.com> on 2021-05-21
Reviewed by Adrian Perez de Castro.

* platform/network/DataURLDecoder.cpp:
(WebCore::DataURLDecoder::decodeBase64):

Canonical link: https://commits.webkit.org/238002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277860 268f45cc-cd09-0410-ab3c-d52691b4dbfc